--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Udacity_Project_8_NewsApp</string>
+    <string name="app_name">News App</string>
 </resources>
